[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycbus"
version = "0.1.0"
description = "Pure-Python async C-Bus PCI/CNI protocol library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Damian Flynn", email = "damian@ yourwebsite.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "pyserial-asyncio>=0.6",
]

[project.urls]
Homepage = "https://github.com/DamianFlynn/ha-cbus"
Repository = "https://github.com/DamianFlynn/ha-cbus"
Issues = "https://github.com/DamianFlynn/ha-cbus/issues"

[tool.setuptools.packages.find]
include = ["pycbus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
