[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycbus"
# Library uses SemVer (MAJOR.MINOR.PATCH).
# The HA integration uses CalVer (YYYY.M.PATCH) in manifest.json.
version = "0.1.0"
description = "Pure-Python async C-Bus PCI/CNI protocol library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Damian Flynn" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "pyserial-asyncio>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/DamianFlynn/ha-cbus"
Repository = "https://github.com/DamianFlynn/ha-cbus"
Issues = "https://github.com/DamianFlynn/ha-cbus/issues"

[tool.setuptools.packages.find]
include = ["pycbus*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/lib", "tests/integration", "tests/cli"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
